--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sidharth Shyamsukha"
   avatar           : "profile.png"
-  bio              : "YSoftware Developer"
+  bio              : "Software Developer"
   location         : "New York City"
   employer         :
   pubmed           : 
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/sidharth20"
+  github           : "sidharth20"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/sidharth-shyamsukha/"
+  linkedin         : "sidharth-shyamsukha"
   orcid            : 
   pinterest        :
   soundcloud       :
